--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,12 @@ android:
     # The SDK version used to compile your project
     - android-23
 
+before_script:
+  - wget https://services.gradle.org/distributions/gradle-3.3-bin.zip
+  - unzip gradle-3.3-bin.zip
+  - export GRADLE_HOME=$PWD/gradle-3.3
+  - export PATH=$GRADLE_HOME/bin:$PATH
+
 script:
   - gradle wrapper
   - ./gradlew assembleDebug
