--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,14 @@ android:
 
     # The SDK version used to compile your project
     - android-23
+    - android-21
+      
+    # Additional components
+    - extra-android-support
+    #- extra-google-google_play_services
+    - extra-google-m2repository
+    #- extra-android-m2repository
+    #- addon-google_apis-google-19
 
 script:
   - ./gradlew assembleDebug
