--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,11 @@ android:
     - extra-google-m2repository
     #- extra-android-m2repository
     #- addon-google_apis-google-19
+    
+  licenses:
+    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
 
 before_script:
   - wget https://services.gradle.org/distributions/gradle-2.14.1-bin.zip
