--- a/.travis.yml
+++ b/.travis.yml
@@ -21,16 +21,11 @@ android:
     - android-21
       
     # Additional components
-    - extra-android-support
+    #- extra-android-support
     #- extra-google-google_play_services
-    - extra-google-m2repository
+    #- extra-google-m2repository
     #- extra-android-m2repository
     #- addon-google_apis-google-19
-    
-  licenses:
-    - 'android-sdk-preview-license-52d11cd2'
-    - 'android-sdk-license-.+'
-    - 'google-gdk-license-.+'
 
 before_script:
   - wget https://services.gradle.org/distributions/gradle-2.14.1-bin.zip
