make travis upgrade java

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,13 @@ notifications:
 jdk:
   - oraclejdk8
 
+sudo: false
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
+      - oracle-java8-set-default
+
 android:
   components:
     # Uncomment the lines below if you want to
