--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,6 @@ before_script:
   - unzip gradle-2.14.1-bin.zip
   - export GRADLE_HOME=$PWD/gradle-2.14.1
   - export PATH=$GRADLE_HOME/bin:$PATH
-  - gradle wrapper
 
 script:
-  - ./gradlew assembleDebug
+  - gradle assembleDebug -PdisablePreDex
