--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId 'edu.berkeley.cs.sdb.cellmate'
         minSdkVersion 21
-        targetSdkVersion 23
+        targetSdkVersion 25
         versionCode 1
         versionName "0.1"
         jackOptions {
@@ -33,9 +33,10 @@ repositories {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:23.0+'
+    compile 'com.android.support:support-v13:25.3.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'org.msgpack:msgpack-core:0.8.11'
     compile 'com.squareup.okhttp3:okhttp:3.5.0'
     compile 'com.github.SoftwareDefinedBuildings:bw2android:v0.1'
-    compile 'com.splunk.mint:mint:4.3.0'
+    compile 'com.splunk.mint:mint:5.0.0'
 }
