--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ repositories {
     maven { url "https://mint.splunk.com/gradle/" }
 }
 
+def grpcVersion = '1.3.0' // CURRENT_GRPC_VERSION
+
 protobuf {
     protoc {
         artifact = 'com.google.protobuf:protoc:3.2.0'
@@ -41,7 +43,7 @@ protobuf {
             artifact = "com.google.protobuf:protoc-gen-javalite:3.0.0"
         }
         grpc {
-            artifact = 'io.grpc:protoc-gen-grpc-java:1.3.0' // CURRENT_GRPC_VERSION
+            artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}" // CURRENT_GRPC_VERSION
         }
     }
     generateProtoTasks {
@@ -67,8 +69,8 @@ dependencies {
     compile 'com.splunk.mint:mint:5.0.0'
 
     // You need to build grpc-java to obtain these libraries below.
-    compile 'io.grpc:grpc-okhttp:1.3.0' // CURRENT_GRPC_VERSION
-    compile 'io.grpc:grpc-protobuf-lite:1.3.0' // CURRENT_GRPC_VERSION
-    compile 'io.grpc:grpc-stub:1.3.0' // CURRENT_GRPC_VERSION
+    compile "io.grpc:grpc-okhttp:${grpcVersion}" // CURRENT_GRPC_VERSION
+    compile "io.grpc:grpc-protobuf-lite:${grpcVersion}" // CURRENT_GRPC_VERSION
+    compile "io.grpc:grpc-stub:${grpcVersion}" // CURRENT_GRPC_VERSION
     compile 'javax.annotation:javax.annotation-api:1.2'
 }
